Add static code analysis to CI using SonarQube